# SimpleNeuralNetwork

./: README.md  pyproject.toml  simple_neural_network.ipynb
