[project]
name = "simpleneuralnetwork"
version = "0.1.0"
description = "simple neural network packages"
authors = [
    {name = "LNWatta",email = "helene.finot@le-campus-numerique.fr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "notebook (>=7.3.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
